# uzt.lt_jobs_scraping

./: .gitignore  Dockerfile  create_database.py  docker-compose.yml  headers  main.py  pylintrc  pyproject.toml  read_database.py  requirements.txt  send_data_to_users.py  sendler.py  settings.py  sub.py  telegram_bot.py  uzt_job_db.sqlite
app/: .env.example  bot.py  create_database.py  graber.py  headers  sendler.py  settings.py  telegram_bot.py
app/bot_core/handlers/: commands.py  default.py  states.py  update_subscr.py  utils.py
app/bot_core/keyboards/: add_remove_subscr.py
app/bot_core/middlewares/: database.py
app/models/: browser.py  category.py  database.py  job.py  subscribes.py  telegram.py  user.py
loggers/: handlers.py  loggers.py  settings.py
models/: _category.py  _job.py  browser.py  category.py  database.py  job.py  subscribes.py  telegram.py  user.py
