[tool.poetry]
name = "parsing-aspx-uzt"
version = "0.1.0"
description = ""
authors = ["ILYA KRIVENOK"]
readme = "README.md"
packages = [{include = "parsing_aspx_uzt"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
bs4 = "^0.0.1"
lxml = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
